Change back to the original code to prevent elements overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,8 +73,8 @@
 
   /* So content will not overflow the page */
   .container {
-    height: 100%;
-    width: 100%;
+    height: 600px;
+    width: 90%;
     max-width: 100%;
     background-color: white;
     background-size: cover;
